--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,15 @@
 	width: 100%;
 }
 
+#abstract {
+	width: 75%;
+	margin: 0 auto;
+}
+
+#paper-link {
+	font-size: 25px;
+}
+
 .decklist {
 	max-width: 100%;
 	width: auto;
